# SPU_CSC3220_W26_Team_Blue

./: CMakeLists.txt  Category.cpp  Category.h  CurrentUser.cpp  CurrentUser.h  Item.cpp  Item.h  Main.cpp  User.cpp  User.h
Documents/: Persona and Moodboard .pptx
